# backend/controller/interfaces.go
@@ -7,6 +7,7 @@ import (
 
 type ArticleUseCase interface {
 	GetArticles(ctx context.Context, limit, offset *int) ([]*entity.Article, error)
+	GetArticleByID(ctx context.Context, articleId string) (*entity.Article, error)
 }
 
 type LPUseCase interface {
